# mitsuba2-vdb-converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pybind_volconv.cpp  pyproject.toml  setup.py  volconv.cpp  volconv.hpp
.github/workflows/: build.yml
ext/: CMakeLists.txt
volconv/: __init__.py
