[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volconv"
version = "0.1.0"
description = "Python bindings for OpenVDB → VOL converter"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pybind11>=2.6.0",
]